--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
         android:textColor="@color/white"
         android:padding="5dp"/>
 
-    <ListView
-        android:id="@+id/list_calls"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvCalls"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
